[package]
name = "subtale-cortex"
version = "0.1.0"
edition = "2021"
authors = ["Luke Carr <luke@subtale.com>"]
description = "Crash handling for Rust applications"
homepage = "https://cortex.subtale.com"
repository = "https://github.com/subtalegames/cortex"
license = "MIT OR Apache-2.0"
readme = "README.md"

[features]
seh = ["lazy_static"]

[dependencies]
lazy_static = { version = "1.4", optional = true }

[dev-dependencies]
native-dialog = "0.6"

[build-dependencies]
cc = "1.0"

[[example]]
name = "windows_seh"
required-features = ["seh"]
